2004-05-19  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/exchange.c: fixed minor dialog layout issues.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13310 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2004-05-19  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/exchange.c: fixed minor dialog layout issues.
+
 	* plug-ins/common/screenshot.c: added the camera icon to the dialog.
 
 	* plug-ins/common/film.c
