2004-05-19  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/gauss_iir.c
	* plug-ins/common/gauss_rle.c
	* plug-ins/common/gbr.c
	* plug-ins/common/gee.c
	* plug-ins/common/gee_zoom.c
	* plug-ins/common/gif.c
	* plug-ins/common/gih.c
	* plug-ins/common/glasstile.c
	* plug-ins/common/gtm.c: HIG-ified.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13311 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,17 @@
 2004-05-19  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/gauss_iir.c
+	* plug-ins/common/gauss_rle.c
+	* plug-ins/common/gbr.c
+	* plug-ins/common/gee.c
+	* plug-ins/common/gee_zoom.c
+	* plug-ins/common/gif.c
+	* plug-ins/common/gih.c
+	* plug-ins/common/glasstile.c
+	* plug-ins/common/gtm.c: HIG-ified.
+
+2004-05-19  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/exchange.c: fixed minor dialog layout issues.
 
 	* plug-ins/common/screenshot.c: added the camera icon to the dialog.
