--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2004-05-19  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/hot.c
+	* plug-ins/common/iwarp.c
+	* plug-ins/common/jpeg.c
+	* plug-ins/common/lic.c
+	* plug-ins/common/mail.c: HIG-ified.
+
+2004-05-19  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/gauss_iir.c
 	* plug-ins/common/gauss_rle.c
 	* plug-ins/common/gbr.c
