--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2004-05-19  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/mapcolor.c
+	* plug-ins/common/mblur.c
+	* plug-ins/common/mng.c
+	* plug-ins/common/mosaic.c
+	* plug-ins/common/newsprint.c
+	* plug-ins/common/oilify.c: HIG-ified.
+
+2004-05-19  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/hot.c
 	* plug-ins/common/iwarp.c
 	* plug-ins/common/jpeg.c
