2004-05-19  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/papertile.c
	* plug-ins/common/pat.c
	* plug-ins/common/pixelize.c
	* plug-ins/common/png.c
	* plug-ins/common/postscript.c
	* plug-ins/common/psp.c: HIG-ified.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13314 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2004-05-19  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/papertile.c
+	* plug-ins/common/pat.c
+	* plug-ins/common/pixelize.c
+	* plug-ins/common/png.c
+	* plug-ins/common/postscript.c
+	* plug-ins/common/psp.c: HIG-ified.
+
+2004-05-19  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/mapcolor.c
 	* plug-ins/common/mblur.c
 	* plug-ins/common/mng.c
