--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,39 @@
+2004-05-19  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/Makefile.am
+	* app/widgets/widgets-types.h
+	* app/widgets/gimpaction.[ch]: new GtkAction subclass which can
+	show either a color or viewable preview in GtkImageMenuItem
+	proxies.
+
+	* app/widgets/gimpenumaction.[ch]
+	* app/widgets/gimppluginaction.[ch]
+	* app/widgets/gimpstringaction.[ch]: derive them from GimpAction.
+
+	* app/widgets/gimpactiongroup.c (gimp_action_group_add_actions):
+	add GimpActions, not GtkActions.
+
+	(gimp_action_group_set_action_color)
+	(gimp_action_group_set_action_viewable): removed all hacks and
+	simply set the "color" or "viewable" properties of the GimpAction
+	to change. Fixes color/viewable previews in menus.
+
+	* app/actions/file-actions.c: show previews in the "Open Recent"
+	menu items.
+
+	Unrelated:
+
+	* app/widgets/widgets-types.h: removed GimpDockedInterface typedef...
+	
+	* app/widgets/gimpdocked.h: ...and added it here. We don't have
+	class struct typedefs in the types header either.
+
+	* app/actions/edit-actions.c: added <Ctrl>+semicolon as shortcut
+	for "edit-fill-pattern".
+
+	* app/actions/gradient-editor-actions.c: added some stock IDs.
+	Please comment.
+
 2004-05-19  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/papertile.c
