--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,21 @@
+2004-05-20  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/randomize.c
+	* plug-ins/common/ripple.c
+	* plug-ins/common/sample_colorize.c
+	* plug-ins/common/scatter_hsv.c
+	* plug-ins/common/sel_gauss.c
+	* plug-ins/common/sharpen.c
+	* plug-ins/common/shift.c
+	* plug-ins/common/smooth_palette.c
+	* plug-ins/common/snoise.c
+	* plug-ins/common/sobel.c
+	* plug-ins/common/sparkle.c
+	* plug-ins/common/spread.c
+	* plug-ins/common/struc.c
+	* plug-ins/common/sunras.c
+	* plug-ins/common/svg.c: HIG-ified.
+
 2004-05-19  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/Makefile.am
