--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,17 @@
 2004-05-20  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/tga.c
+	* plug-ins/common/threshold_alpha.c
+	* plug-ins/common/tiff.c
+	* plug-ins/common/tile.c
+	* plug-ins/common/tileit.c
+	* plug-ins/common/uniteditor.c
+	* plug-ins/common/unsharp.c
+	* plug-ins/common/video.c
+	* plug-ins/common/vpropagate.c: HIG-ified.
+
+2004-05-20  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/randomize.c
 	* plug-ins/common/ripple.c
 	* plug-ins/common/sample_colorize.c
