2004-05-20  Sven Neumann  <sven@gimp.org>
	* plug-ins/maze/maze_face.c
	* plug-ins/xjt/xjt.c: HIG-ified. Say goodbye to "Parameter Settings".


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13320 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-05-20  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/maze/maze_face.c
+	* plug-ins/xjt/xjt.c: HIG-ified. Say goodbye to "Parameter Settings".
+
+2004-05-20  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/warp.c
 	* plug-ins/common/whirlpinch.c
 	* plug-ins/common/wmf.c
