--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-19  Manish Singh  <yosh@gimp.org>
+
+        * plug-ins/pygimp/gimpfu.py: Actually return values from the run
+        function. Fixes #141338.
+
 2004-05-20  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/maze/maze_face.c
