2004-05-20  Sven Neumann  <sven@gimp.org>
	* plug-ins/FractalExplorer/Dialogs.c
	* plug-ins/FractalExplorer/FractalExplorer.c: HIG-ification and
	some code cleanup.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13325 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,12 @@
+2004-05-20  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/FractalExplorer/Dialogs.c
+	* plug-ins/FractalExplorer/FractalExplorer.c: HIG-ification and
+	some code cleanup.
+
 2004-05-19  Manish Singh  <yosh@gimp.org>
 
-        * plug-ins/pygimp/gimpfu.py: Actually return values from the run
+	* plug-ins/pygimp/gimpfu.py: Actually return values from the run
         function. Fixes #141338.
 
 2004-05-20  Sven Neumann  <sven@gimp.org>
