--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-05-20  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/Lighting/lighting_ui.c
+	* plug-ins/MapObject/mapobject_ui.c
+
+2004-05-20  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/FractalExplorer/Dialogs.c
 	* plug-ins/FractalExplorer/FractalExplorer.c: HIG-ification and
 	some code cleanup.
