finish the ChangeLog entry
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13327 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 2004-05-20  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/Lighting/lighting_ui.c
-	* plug-ins/MapObject/mapobject_ui.c
+	* plug-ins/MapObject/mapobject_ui.c: HIG-ified.
 
 2004-05-20  Sven Neumann  <sven@gimp.org>
 
