--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,11 @@
 2004-05-20  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/Lighting/lighting_ui.c
-	* plug-ins/MapObject/mapobject_ui.c: HIG-ified.
+	* plug-ins/MapObject/mapobject_ui.c
+	* plug-ins/bmp/bmpwrite.c
+	* plug-ins/fits/fits.c
+	* plug-ins/flame/flame.c
+	* plug-ins/fp/fp.c: HIG-ified.
 
 2004-05-20  Sven Neumann  <sven@gimp.org>
 
