2004-05-20  Sven Neumann  <sven@gimp.org>
	* plug-ins/Lighting/lighting_ui.c
	* plug-ins/MapObject/mapobject_ui.c
	* plug-ins/bmp/bmpwrite.c
	* plug-ins/fits/fits.c
	* plug-ins/flame/flame.c
	* plug-ins/fp/fp.c
	* plug-ins/gfig/gfig-preview.c
	* plug-ins/gfig/gfig.c: HIG-ified.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13329 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,7 +5,9 @@
 	* plug-ins/bmp/bmpwrite.c
 	* plug-ins/fits/fits.c
 	* plug-ins/flame/flame.c
-	* plug-ins/fp/fp.c: HIG-ified.
+	* plug-ins/fp/fp.c
+	* plug-ins/gfig/gfig-preview.c
+	* plug-ins/gfig/gfig.c: HIG-ified.
 
 2004-05-20  Sven Neumann  <sven@gimp.org>
 
