--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-05-20  Maurits Rijk  <m.rijk@chello.nl>
+
+	* plug-ins/imagemap/imap_*.[ch]: (partly) HIG-ified, replaced 
+	deprecated widget GtkCList by GtkTreeModel/View (also fixes #136893), 
+	use file choosers instead of file selectors, minor clean-up.
+
 2004-05-20  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/Lighting/lighting_ui.c
