2004-05-21  Sven Neumann  <sven@gimp.org>
	* POTFILES.in: updated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13336 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-21  Sven Neumann  <sven@gimp.org>
+
+	* POTFILES.in: updated.
+
 2004-05-21  Marco Ciampa  <ciampix@libero.it>
 
 	* it.po: Updated italian translation.
