2004-05-21  Sven Neumann  <sven@gimp.org>
	* plug-ins/gflare/gflare.c
	* plug-ins/gfli/gfli.c
	* plug-ins/ifscompose/ifscompose.c
	* plug-ins/sel2path/sel2path.c
	* plug-ins/sel2path/sel2path_adv_dialog.c
	* plug-ins/sgi/sgi.c
	* plug-ins/winicon/icodialog.c: HIG-ification.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13337 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2004-05-21  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/gflare/gflare.c
+	* plug-ins/gfli/gfli.c
+	* plug-ins/ifscompose/ifscompose.c
+	* plug-ins/sel2path/sel2path.c
+	* plug-ins/sel2path/sel2path_adv_dialog.c
+	* plug-ins/sgi/sgi.c
+	* plug-ins/winicon/icodialog.c: HIG-ification.
+
 2004-05-21  Michael Natterer  <mitch@gimp.org>
 
 	* app/actions/data-commands.c (data_delete_callback): eek, delete
