2004-05-21  Sven Neumann  <sven@gimp.org>
	* app/gui/preferences-dialog.c: added some GtkSizeGroups and
	changed spacings to improve the dialog layout.

	* app/gui/file-new-dialog.c
	* app/widgets/gimpgrideditor.c
	* app/widgets/gimptemplateeditor.c: minor changes for consistency.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13338 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2004-05-21  Sven Neumann  <sven@gimp.org>
 
+	* app/gui/preferences-dialog.c: added some GtkSizeGroups and
+	changed spacings to improve the dialog layout.
+
+	* app/gui/file-new-dialog.c
+	* app/widgets/gimpgrideditor.c
+	* app/widgets/gimptemplateeditor.c: minor changes for consistency.
+
+2004-05-21  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/gflare/gflare.c
 	* plug-ins/gfli/gfli.c
 	* plug-ins/ifscompose/ifscompose.c
