--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-22  Marco Ciampa  <ciampix@libero.it>
+
+	* it.po: Updated italian translation.
+	
 2004-05-21  Ole Laursen  <olau@hardworking.dk>
 
 	* da.po: Fixed a string in Danish translation.
