--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-23  Marco Ciampa  <ciampix@libero.it>
+
+	* it.po: Updated italian translation.
+	
 2004-05-22  Marco Ciampa  <ciampix@libero.it>
 
 	* it.po: Updated italian translation.
