2004-05-23  Zygimantas Berucka  <uid0@akl.lt>
* lt.po: Added Lithuanian translation.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13349 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-23  žygimantas Beručka  <uid0@akl.lt>
+
+	* lt.po: Updated Lithuanian translation.
+
 2004-05-18  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
 
 	* ru.po: Updated Russian translation
