--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-23  Michael Schumacher <schumaml@cvs.gnome.org>
+
+	* libgimp/gimp.def: gimp_register_file_handler_mime added
+
 2004-05-23  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/widgets-types.h: reoedered to somehow reflect the
