--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-23  Žygimantas Beručka  <uid0@akl.lt>
+
+	* configure.in: Added "lt" to ALL_LINGUAS.
+
 2004-05-23  Michael Schumacher <schumaml@cvs.gnome.org>
 
 	* libgimp/gimp.def: gimp_register_file_handler_mime added
