--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-23  Michael Natterer  <mitch@gimp.org>
+
+	* app/core/gimpdatalist.c: code cleanup, no logic changed.
+
 2004-05-23  Henrik Brix Andersen  <brix@gimp.org>
 
 	* app/config/gimprc-blurbs.h
