2004-05-23  Sven Neumann  <sven@gimp.org>
	* Makefile.am (tips_POFILES): added lt.po (Lithuanian).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13356 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-23  Sven Neumann  <sven@gimp.org>
+
+	* Makefile.am (tips_POFILES): added lt.po (Lithuanian).
+
 2004-05-23  žygimantas Beručka  <uid0@akl.lt>
 
 	* lt.po: Updated Lithuanian translation.
