--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2004-05-23  Sven Neumann  <sven@gimp.org>
+
+	Fixes for bug #142996:
+	
+	* app/gui/preferences-dialog.c: added missing gettext call. 
+
+	* app/config/gimprc-blurbs.h
+	* app/core/gimptemplate.c
+	* app/gui/gradient-editor-menu.c: fixed typos.
+
 2004-05-23  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/gimpdatalist.c: code cleanup, no logic changed.
