2004-05-23  Sven Neumann  <sven@gimp.org>
	More fixes for bug #142996:

	* plug-ins/common/postscript.c
	* plug-ins/common/sparkle.c
	* plug-ins/common/sunras.c
	* plug-ins/common/uniteditor.c
	* plug-ins/fits/fits.c: fixed typos.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13359 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2004-05-23  Sven Neumann  <sven@gimp.org>
 
+	More fixes for bug #142996:
+
+	* plug-ins/common/postscript.c
+	* plug-ins/common/sparkle.c
+	* plug-ins/common/sunras.c
+	* plug-ins/common/uniteditor.c
+	* plug-ins/fits/fits.c: fixed typos.
+
+2004-05-23  Sven Neumann  <sven@gimp.org>
+
 	Fixes for bug #142996:
 	
 	* app/gui/preferences-dialog.c: added missing gettext call. 
