--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-24  Marco Ciampa  <ciampix@libero.it>
+
+	* it.po: updated italian translation.
+
 2004-05-23  Henrik Brix Andersen  <brix@gimp.org>
 
 	* POTFILES.in: added plug-ins/MapObject/mapobject_apply.c and
